added images and description to the card

--- a/index.html
+++ b/index.html
@@ -12,19 +12,44 @@
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-dark ">
     <div class="container-fluid ">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand text-light text-center" href="#">Aqib Jalees</a>
+        <a class="navbar-brand text-light " href="#">Aqib Jalees</a>
       </div>
-   
   </nav>
 <body>
-   <div class="container-fluid">
+  <div>
     <h1 class="text-center" >Photojournalism PBL</h1>
-   </div>
-   
+  </div>
+  <div>
+    <div class="card mb-3">
+       
+        <div class="card-body">
+          <h2 class="card-title text-center">Workers inspect pork innards at a meat-packing plant….
+        </h2>
+        <img src="images/image1.png" style="height: 400px; padding-left: 40px; padding-right: 40px;" class="card-img-top img-fluid img-thumbnail"  alt="...">
+          <h4 class="card-text">“Workers inspect pork innards at a meat-packing plant. Upton Sinclair brought the conditions of such plants into public view in his novel The Jungle.”</h3>
+          <ul>
+              <li>In this photograph, workers from the Gilded age can be seen working in a meat-packing factory with no sanitary precautions. This was before the Meat inspection Act of 1906. The workers are not wearing gloves when handling the meat. Workers can be seen without any clothing protection. Workers also have little room to maneuver. This was before the Meat inspection Act of 1906. </li>
+              <li>As the title says, conditions like this inspired the novel The Jungle by Upton Sinclair. In this novel, he describes the horrible conditions. He describes the workers’ fingers  being grounded up and mixed with the meat. In addition to that, he described how the machinery leaves the workers’ fingers as nubs and how the acid eats away their hand.</li>
+          </ul>
+        </div>
+      </div>
+  </div>
+  <div class="image-container">
+    <div class="card mb-3">
+       
+        <div class="card-body">
+          <h1 class="card-title text-center">Room in a Tenement (Jacob Riis, 1890)
+        </h1>
+        <img src="images/image2.png" style="height: 400px; padding-left: 40px; padding-right: 40px;" class="card-img-top img-fluid img-thumbnail"  alt="...">
+        <p>In the photograph a family of seven are living in a small cramped room that would normally be used for only one person. The room is in a very poor condition, it has a kitchen, beds and closet in just one room. The room looks very disheveled and the room has no windows to accommodate sunlight. </p>
+        <p>The apartments that the lower-working class could afford were never repaired by the by the landlords. This left the people with broken and shamble home with little heat for the winters. Some tenements contains up to 12 people in the small, unventilated room. These tenements were dirty and known to spread diseases. </p>
+    </div>
+      </div>
+  </div>
 </body>
 
 </html>
