Added padding to the paragraph

--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
       <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand text-light " href="#">Aqib Jalees</a>
-      </div>
+      <h1 class="text-center text-light">Photojournalism PBL</h1>
   </nav>
 <body>
   <div>
-    <h1 class="text-center" >Photojournalism PBL</h1>
+   
   </div>
   <div>
     <div class="card mb-3">
@@ -30,7 +28,7 @@
           <h2 class="card-title text-center">Workers inspect pork innards at a meat-packing plant….
         </h2>
         <img src="images/image1.png" style="height: 400px; padding-left: 40px; padding-right: 40px;" class="card-img-top img-fluid img-thumbnail"  alt="...">
-          <h4 class="card-text">“Workers inspect pork innards at a meat-packing plant. Upton Sinclair brought the conditions of such plants into public view in his novel The Jungle.”</h3>
+          <h4 class="card-text"style="padding-top: 20px;">“Workers inspect pork innards at a meat-packing plant. Upton Sinclair brought the conditions of such plants into public view in his novel The Jungle.”</h3>
           <ul>
               <li>In this photograph, workers from the Gilded age can be seen working in a meat-packing factory with no sanitary precautions. This was before the Meat inspection Act of 1906. The workers are not wearing gloves when handling the meat. Workers can be seen without any clothing protection. Workers also have little room to maneuver. This was before the Meat inspection Act of 1906. </li>
               <li>As the title says, conditions like this inspired the novel The Jungle by Upton Sinclair. In this novel, he describes the horrible conditions. He describes the workers’ fingers  being grounded up and mixed with the meat. In addition to that, he described how the machinery leaves the workers’ fingers as nubs and how the acid eats away their hand.</li>
