Added image and description to the third card

--- a/index.html
+++ b/index.html
@@ -36,17 +36,30 @@
         </div>
       </div>
   </div>
-  <div class="image-container">
+  <div class="image-container" style="padding-top: 50px;">
     <div class="card mb-3">
-       
-        <div class="card-body">
+        <div class="card-body bg-dark bg-opacity-10">
           <h1 class="card-title text-center">Room in a Tenement (Jacob Riis, 1890)
         </h1>
         <img src="images/image2.png" style="height: 400px; padding-left: 40px; padding-right: 40px;" class="card-img-top img-fluid img-thumbnail"  alt="...">
-        <p>In the photograph a family of seven are living in a small cramped room that would normally be used for only one person. The room is in a very poor condition, it has a kitchen, beds and closet in just one room. The room looks very disheveled and the room has no windows to accommodate sunlight. </p>
+        <p style="padding-top: 20px;">In the photograph a family of seven are living in a small cramped room that would normally be used for only one person. The room is in a very poor condition, it has a kitchen, beds and closet in just one room. The room looks very disheveled and the room has no windows to accommodate sunlight. </p>
         <p>The apartments that the lower-working class could afford were never repaired by the by the landlords. This left the people with broken and shamble home with little heat for the winters. Some tenements contains up to 12 people in the small, unventilated room. These tenements were dirty and known to spread diseases. </p>
     </div>
       </div>
+      <div class="image-container" style="padding-top: 50px;">
+        <div class="card mb-3">
+            <div class="card-body">
+              <h1 class="card-title text-center">HARRIS & EWING/UNDERWOOD ARCHIVES/GETTY IMAGES (1908)</h1>
+            <img src="images/image3.png" style="height: 400px; padding-left: 40px; padding-right: 40px;" class="card-img-top img-fluid img-thumbnail"  alt="...">
+           <h4 class="card-text"style="padding-top: 20px;">“This 1908 photo shows, from left to right, steel mogul Andrew Carnegie, politician William Jennings Bryan, financier James J. Hill, and labor leader John Mitchell.”
+        </h4>
+            <ul>
+                <li>This picture shows the Steel mogul Andrew Carnegie and the financier James J. Hill. They are pictured with politician William Jennings Bryan and labor John Mitchell. Both Carnegie and Hill were known as “Robber Barons” for their exploitative business practices.</li>
+                <li>This photograph is shown through the political and social  lens because Carnegie is a steel mongul and owner of a monopoly and advocates for laborers. It is showing two opposing sides, one being for the rich elite while the other for the common people. </li>
+                <li>Andrew Carnegie was known as a “Robber Baron” because his business practices. His factories were firing union workers for non-union workers. This lead to the Homestead Strike, which ended in a battle with the laborers and private detectives named the Pinkertons. The National Guard at to break apart the night</li>
+            </ul>
+        </div>
+          </div>
   </div>
 </body>
 
