--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
-    <title>Document</title>
+    <title>Photojournalism PBL</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-dark ">
     <div class="container-fluid ">
@@ -36,7 +36,7 @@
         </div>
       </div>
   </div>
-  <div class="image-container" style="padding-top: 50px;">
+<div class="image-container" style="padding-top: 50px;">
     <div class="card mb-3">
         <div class="card-body bg-dark bg-opacity-10">
           <h1 class="card-title text-center">Room in a Tenement (Jacob Riis, 1890)
@@ -45,8 +45,8 @@
         <p style="padding-top: 20px;">In the photograph a family of seven are living in a small cramped room that would normally be used for only one person. The room is in a very poor condition, it has a kitchen, beds and closet in just one room. The room looks very disheveled and the room has no windows to accommodate sunlight. </p>
         <p>The apartments that the lower-working class could afford were never repaired by the by the landlords. This left the people with broken and shamble home with little heat for the winters. Some tenements contains up to 12 people in the small, unventilated room. These tenements were dirty and known to spread diseases. </p>
     </div>
-      </div>
-      <div class="image-container" style="padding-top: 50px;">
+</div>
+<div class="image-container" style="padding-top: 50px;">
         <div class="card mb-3">
             <div class="card-body">
               <h1 class="card-title text-center">HARRIS & EWING/UNDERWOOD ARCHIVES/GETTY IMAGES (1908)</h1>
@@ -59,7 +59,34 @@
                 <li>Andrew Carnegie was known as a “Robber Baron” because his business practices. His factories were firing union workers for non-union workers. This lead to the Homestead Strike, which ended in a battle with the laborers and private detectives named the Pinkertons. The National Guard at to break apart the night</li>
             </ul>
         </div>
-          </div>
+</div>
+<div class="image-container" style="padding-top: 50px;">
+    <div class="card mb-3">
+        <div class="card-body bg-dark bg-opacity-10">
+          <h1 class="card-title text-center">“Butchers at the Deli”(Aqib Jalees 2022)</h1>
+        <img src="images/image4.png" style="height: 400px; padding-left: 40px; padding-right: 40px;" class="card-img-top img-fluid img-thumbnail"  alt="...">
+        <p style="padding-top: 20px;">This is a photograph of a current, modern day butcher shop/meat shop where a man can be seen chopping a goat into particular pieces with his supervisor closely monitoring him. The photograph is shown in a social lens in the way that health regulations have severally upgraded compared to back in the Gilded Age as back then not even gloves were used, in the present the man in the picture is using gloves, wearing clothing to both protect himself and keep clean, and a mask to prevent the spread of covid</p>
+        <p>These precautions like the gloves and coat were added by the Meat Inspection Act. This insures that all meats are sanitary before being packed and sold.</p>
+    </div>
+</div>
+<div class="image-container" style="padding-top: 50px;">
+    <div class="card mb-3">
+        <div class="card-body">
+          <h1 class="card-title text-center">“Modern Day Apartments” (Aqib Jalees, 2022)
+        </h1>
+        <img src="images/image5.png" style="height: 400px; padding-left: 40px; padding-right: 40px;" class="card-img-top img-fluid img-thumbnail"  alt="...">
+        <p style="padding-top: 20px;">This is a photograph of a current, modern day one bathroom, two bedroom, one kitchen, one living room apartment with ample closets.  (The tenements of the gilded age didn’t even have separate rooms or running water.) This is a big space for a small family to comfortably live in with a lot of hygienic and sanitary</p>
+        <p>measurements. This photograph is shown in a social and economic lens because it shows the modern day apartment, compared to gilded age tenements, the modern apartment is considerably larger and well kept, however, it is still incredibly expensive compared to what you get, similar to a Gilded Age tenement.</p>
+    </div>
+</div>
+<div class="image-container" style="padding-top: 50px;">
+    <div class="card mb-3">
+        <div class="card-body bg-dark bg-opacity-10">
+          <h1 class="card-title text-center">“Donald Trump, Michael Bloomberg and Jared Kushner Attend the New York Observer’s 25th Anniversary in New York in 2013.”</h1>
+        <img src="images/image6.png" style="height: 400px; padding-left: 40px; padding-right: 40px;" class="card-img-top img-fluid img-thumbnail"  alt="...">
+        <p style="padding-top: 20px;">This photograph is an image that depicts some of the biggest and most famous political figures/people in the modern day. From left to right Donald Trump, Michael Bloomberg, and Jared Kushner. This photograph is shown through a political lens because it shows modern day nepotism and robber barons. As former president Donald Trump is shown who was known for performing illegal business practices such as tax evasion, and even abusing his powers to sexually assault and harass women, it shows nepotism in that in the photo he is seen with his senior advisor who is also his son in law.</p>
+    </div>
+</div>
   </div>
 </body>
 
