--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
    
   </div>
   <div>
-    <div class="card mb-3">
-       
+    <div class="card mb-3"></div>
         <div class="card-body">
           <h2 class="card-title text-center">Workers inspect pork innards at a meat-packing plant….
         </h2>
@@ -89,5 +88,9 @@
 </div>
   </div>
 </body>
+<footer class="navbar navbar-expand-lg navbar-light bg-dark ">
+    <div class="container-fluid ">
+      <p class="text-light" style="margin-left: 28%; margin-right: 20%;">By:  AQIB JALEES, YUHAN PERN JACOB, DAIYAN KHONDAKER, AFRIDA TASNIM</p>
+    </footer>
 
 </html>
