changed color of the card

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 <div class="image-container" style="padding-top: 50px;">
     <div class="card mb-3">
-        <div class="card-body bg-dark bg-opacity-10">
+        <div class="card-body bg-primary bg-opacity-10">
           <h1 class="card-title text-center">Room in a Tenement (Jacob Riis, 1890)
         </h1>
         <img src="images/image2.png" style="height: 400px; padding-left: 230px; padding-right: 230px;" class="card-img-top img-fluid img-thumbnail"  alt="...">
