changed color of the card

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div>
     <div class="card mb-3"></div>
-        <div class="card-body">
+        <div class="card-body bg-danger bg-opacity-10">
           <h2 class="card-title text-center">Workers inspect pork innards at a meat-packing plant….
         </h2>
         <img src="images/image1.png" style="height: 400px; padding-left: 230px; padding-right: 230px;" class="card-img-top img-fluid img-thumbnail"  alt="...">
@@ -44,7 +44,7 @@
 </div>
 <div class="image-container" style="padding-top: 50px;">
         <div class="card mb-3">
-            <div class="card-body">
+            <div class="card-body bg-success bg-opacity-10">
               <h1 class="card-title text-center">HARRIS & EWING/UNDERWOOD ARCHIVES/GETTY IMAGES (1908)</h1>
             <img src="images/image3.png" style="height: 400px; padding-left: 230px; padding-right: 230px;" class="card-img-top img-fluid img-thumbnail"  alt="...">
            <h4 class="card-text"style="padding-top: 20px;">“This 1908 photo shows, from left to right, steel mogul Andrew Carnegie, politician William Jennings Bryan, financier James J. Hill, and labor leader John Mitchell.”
@@ -58,7 +58,7 @@
 </div>
 <div class="image-container" style="padding-top: 50px;">
     <div class="card mb-3">
-        <div class="card-body bg-dark bg-opacity-10">
+        <div class="card-body bg-warning bg-opacity-10">
           <h1 class="card-title text-center">“Butchers at the Deli”(Aqib Jalees 2022)</h1>
         <img src="images/image4.png" style="height: 400px; padding-left: 230px; padding-right: 230px;" class="card-img-top img-fluid img-thumbnail"  alt="...">
         <p style="padding-top: 20px;">This is a photograph of a current, modern day butcher shop/meat shop where a man can be seen chopping a goat into particular pieces with his supervisor closely monitoring him. The photograph is shown in a social lens in the way that health regulations have severally upgraded compared to back in the Gilded Age as back then not even gloves were used, in the present the man in the picture is using gloves, wearing clothing to both protect himself and keep clean, and a mask to prevent the spread of covid</p>
@@ -67,12 +67,12 @@
 </div>
 <div class="image-container" style="padding-top: 50px;">
     <div class="card mb-3">
-        <div class="card-body">
+        <div class="card-body bg-info bg-opacity-10">
           <h1 class="card-title text-center">“Modern Day Apartments” (Aqib Jalees, 2022)
         </h1>
         <img src="images/image5.png" style="height: 400px; padding-left: 230px; padding-right: 230px;" class="card-img-top img-fluid img-thumbnail "  alt="...">
-        <p style="padding-top: 20px;">This is a photograph of a current, modern day one bathroom, two bedroom, one kitchen, one living room apartment with ample closets.  (The tenements of the gilded age didn’t even have separate rooms or running water.) This is a big space for a small family to comfortably live in with a lot of hygienic and sanitary</p>
-        <p>measurements. This photograph is shown in a social and economic lens because it shows the modern day apartment, compared to gilded age tenements, the modern apartment is considerably larger and well kept, however, it is still incredibly expensive compared to what you get, similar to a Gilded Age tenement.</p>
+        <p style="padding-top: 20px;">This is a photograph of a current, modern day one bathroom, two bedroom, one kitchen, one living room apartment with ample closets.  (The tenements of the gilded age didn’t even have separate rooms or running water.) This is a big space for a small family to comfortably live in with a lot of hygienic and sanitary measurements. This photograph is shown in a social and economic lens because it shows the modern day apartment, compared to gilded age tenements, the modern apartment is considerably larger and well kept, however, it is still incredibly expensive compared to what you get, similar to a Gilded Age tenement.</p>
+        <p></p>
     </div>
 </div>
 <div class="image-container" style="padding-top: 50px;">
