--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <title>Photojournalism PBL</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-dark ">
@@ -21,7 +25,7 @@
   <div>
     <div class="card mb-3"></div>
         <div class="card-body bg-danger bg-opacity-10">
-          <h2 class="card-title text-center">Workers inspect pork innards at a meat-packing plant….
+          <h2 class="card-title text-center animate__animated animate__pulse">Workers inspect pork innards at a meat-packing plant….
         </h2>
         <img src="images/image1.png" style="height: 400px; padding-left: 230px; padding-right: 230px;" class="card-img-top img-fluid img-thumbnail"  alt="...">
           <h4 class="card-text"style="padding-top: 20px;">“Workers inspect pork innards at a meat-packing plant. Upton Sinclair brought the conditions of such plants into public view in his novel The Jungle.”</h3>
@@ -35,7 +39,7 @@
 <div class="image-container" style="padding-top: 50px;">
     <div class="card mb-3">
         <div class="card-body bg-primary bg-opacity-10">
-          <h1 class="card-title text-center">Room in a Tenement (Jacob Riis, 1890)
+          <h1 class="card-title text-center animate__animated animate__pulse">Room in a Tenement (Jacob Riis, 1890)
         </h1>
         <img src="images/image2.png" style="height: 400px; padding-left: 230px; padding-right: 230px;" class="card-img-top img-fluid img-thumbnail"  alt="...">
         <p style="padding-top: 20px;">In the photograph a family of seven are living in a small cramped room that would normally be used for only one person. The room is in a very poor condition, it has a kitchen, beds and closet in just one room. The room looks very disheveled and the room has no windows to accommodate sunlight. </p>
