Added animation to the image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="card-body bg-danger bg-opacity-10">
           <h2 class="card-title text-center animate__animated animate__pulse">Workers inspect pork innards at a meat-packing plant….
         </h2>
-        <img src="images/image1.png" style="height: 400px; padding-left: 230px; padding-right: 230px;" class="card-img-top img-fluid img-thumbnail"  alt="...">
+        <img src="images/image1.png" style="height: 400px; padding-left: 230px; padding-right: 230px;" class="card-img-top img-fluid img-thumbnail animate__animated animate__slideInLeft"  alt="...">
           <h4 class="card-text"style="padding-top: 20px;">“Workers inspect pork innards at a meat-packing plant. Upton Sinclair brought the conditions of such plants into public view in his novel The Jungle.”</h3>
           <ul>
               <li>In this photograph, workers from the Gilded age can be seen working in a meat-packing factory with no sanitary precautions. This was before the Meat inspection Act of 1906. The workers are not wearing gloves when handling the meat. Workers can be seen without any clothing protection. Workers also have little room to maneuver. This was before the Meat inspection Act of 1906. </li>
