--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -22,12 +23,16 @@
       <h1 class="text-center text-light">Photojournalism PBL</h1>
   </nav>
 <body>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <div>
     <div class="card mb-3"></div>
-        <div class="card-body bg-danger bg-opacity-10">
+        <div class="card-body bg-danger bg-opacity-10" data-aos="fade-right">
           <h2 class="card-title text-center animate__animated animate__pulse">Workers inspect pork innards at a meat-packing plant….
         </h2>
-        <img src="images/image1.png" style="height: 400px; padding-left: 230px; padding-right: 230px;" class="card-img-top img-fluid img-thumbnail animate__animated animate__slideInLeft"  alt="...">
+        <img src="images/image1.png" style="height: 400px; padding-left: 230px; padding-right: 230px;" class="card-img-top img-fluid"  alt="...">
           <h4 class="card-text"style="padding-top: 20px;">“Workers inspect pork innards at a meat-packing plant. Upton Sinclair brought the conditions of such plants into public view in his novel The Jungle.”</h3>
           <ul>
               <li>In this photograph, workers from the Gilded age can be seen working in a meat-packing factory with no sanitary precautions. This was before the Meat inspection Act of 1906. The workers are not wearing gloves when handling the meat. Workers can be seen without any clothing protection. Workers also have little room to maneuver. This was before the Meat inspection Act of 1906. </li>
@@ -36,7 +41,7 @@
         </div>
       </div>
   </div>
-<div class="image-container" style="padding-top: 50px;">
+<div class="image-container" style="padding-top: 50px;" data-aos="fade-left">
     <div class="card mb-3">
         <div class="card-body bg-primary bg-opacity-10">
           <h1 class="card-title text-center animate__animated animate__pulse">Room in a Tenement (Jacob Riis, 1890)
@@ -46,7 +51,7 @@
         <p>The apartments that the lower-working class could afford were never repaired by the by the landlords. This left the people with broken and shamble home with little heat for the winters. Some tenements contains up to 12 people in the small, unventilated room. These tenements were dirty and known to spread diseases. </p>
     </div>
 </div>
-<div class="image-container" style="padding-top: 50px;">
+<div class="image-container" style="padding-top: 50px;"data-aos="fade-right">
         <div class="card mb-3">
             <div class="card-body bg-success bg-opacity-10">
               <h1 class="card-title text-center">HARRIS & EWING/UNDERWOOD ARCHIVES/GETTY IMAGES (1908)</h1>
@@ -60,7 +65,7 @@
             </ul>
         </div>
 </div>
-<div class="image-container" style="padding-top: 50px;">
+<div class="image-container" style="padding-top: 50px;" data-aos="fade-left">
     <div class="card mb-3">
         <div class="card-body bg-warning bg-opacity-10">
           <h1 class="card-title text-center">“Butchers at the Deli”(Aqib Jalees 2022)</h1>
@@ -69,7 +74,7 @@
         <p>These precautions like the gloves and coat were added by the Meat Inspection Act. This insures that all meats are sanitary before being packed and sold.</p>
     </div>
 </div>
-<div class="image-container" style="padding-top: 50px;">
+<div class="image-container" style="padding-top: 50px;"data-aos="fade-right">
     <div class="card mb-3">
         <div class="card-body bg-info bg-opacity-10">
           <h1 class="card-title text-center">“Modern Day Apartments” (Aqib Jalees, 2022)
@@ -79,7 +84,7 @@
         <p></p>
     </div>
 </div>
-<div class="image-container" style="padding-top: 50px;">
+<div class="image-container" style="padding-top: 50px;" data-aos="fade-left">
     <div class="card mb-3">
         <div class="card-body bg-dark bg-opacity-10">
           <h1 class="card-title text-center">“Donald Trump, Michael Bloomberg and Jared Kushner Attend the New York Observer’s 25th Anniversary in New York in 2013.”</h1>
