Added animation duration to the card

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </script>
   <div>
     <div class="card mb-3"></div>
-        <div class="card-body bg-danger bg-opacity-10" data-aos="fade-right">
+        <div class="card-body bg-danger bg-opacity-10" data-aos="fade-right" data-aos-duration="2000">
           <h2 class="card-title text-center animate__animated animate__pulse">Workers inspect pork innards at a meat-packing plant….
         </h2>
         <img src="images/image1.png" style="height: 400px; padding-left: 230px; padding-right: 230px;" class="card-img-top img-fluid"  alt="...">
@@ -41,7 +41,7 @@
         </div>
       </div>
   </div>
-<div class="image-container" style="padding-top: 50px;" data-aos="fade-left">
+<div class="image-container" style="padding-top: 50px;" data-aos="fade-left"data-aos-duration="2000">
     <div class="card mb-3">
         <div class="card-body bg-primary bg-opacity-10">
           <h1 class="card-title text-center animate__animated animate__pulse">Room in a Tenement (Jacob Riis, 1890)
@@ -51,7 +51,7 @@
         <p>The apartments that the lower-working class could afford were never repaired by the by the landlords. This left the people with broken and shamble home with little heat for the winters. Some tenements contains up to 12 people in the small, unventilated room. These tenements were dirty and known to spread diseases. </p>
     </div>
 </div>
-<div class="image-container" style="padding-top: 50px;"data-aos="fade-right">
+<div class="image-container" style="padding-top: 50px;"data-aos="fade-right"data-aos-duration="2000">
         <div class="card mb-3">
             <div class="card-body bg-success bg-opacity-10">
               <h1 class="card-title text-center">HARRIS & EWING/UNDERWOOD ARCHIVES/GETTY IMAGES (1908)</h1>
@@ -65,7 +65,7 @@
             </ul>
         </div>
 </div>
-<div class="image-container" style="padding-top: 50px;" data-aos="fade-left">
+<div class="image-container" style="padding-top: 50px;" data-aos="fade-left"data-aos-duration="2000">
     <div class="card mb-3">
         <div class="card-body bg-warning bg-opacity-10">
           <h1 class="card-title text-center">“Butchers at the Deli”(Aqib Jalees 2022)</h1>
@@ -74,7 +74,7 @@
         <p>These precautions like the gloves and coat were added by the Meat Inspection Act. This insures that all meats are sanitary before being packed and sold.</p>
     </div>
 </div>
-<div class="image-container" style="padding-top: 50px;"data-aos="fade-right">
+<div class="image-container" style="padding-top: 50px;"data-aos="fade-right"data-aos-duration="2000">
     <div class="card mb-3">
         <div class="card-body bg-info bg-opacity-10">
           <h1 class="card-title text-center">“Modern Day Apartments” (Aqib Jalees, 2022)
@@ -84,7 +84,7 @@
         <p></p>
     </div>
 </div>
-<div class="image-container" style="padding-top: 50px;" data-aos="fade-left">
+<div class="image-container" style="padding-top: 50px;" data-aos="fade-left"data-aos-duration="2000">
     <div class="card mb-3">
         <div class="card-body bg-dark bg-opacity-10">
           <h1 class="card-title text-center">“Donald Trump, Michael Bloomberg and Jared Kushner Attend the New York Observer’s 25th Anniversary in New York in 2013.”</h1>
